[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "NIST SP 800-171 Rev. 2"
authors = [{name = "Andrew", email = "graziella@lumache"}]
authors = [{name = "Jen", email = "graziella@lumache"}]
authors = [{name = "Josh", email = "graziella@lumache"}]
dynamic = ["version", "description"]
